--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="overlay"></div>
-
+    <div id="confetti-container"></div>
     <div id="result-modal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
@@ -109,7 +109,8 @@
             </button>
         </div>
     </div>
-    <script src="./src/crt.js"></script>
+    
+
     <script src="./src/main.js"></script>
 </body>
 </html>
